# equilibria

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  2026-06-20-gtap-multiperiodo-design.md  2026-06-20-gtap-multiperiodo-plan.md  2026-06-24-equilibria-1.0-roadmap-design.md  2026-07-06-gtap7-15x10-ifsub1-vegfruit-attempts-log.md  2026-07-16-gtap7-ifsub1-shock-closed-saga.md  2026-07-17-xmodel-parity-design.md  2026-07-17-xmodel-parity-plan.md  AGENTS.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  GDX_DECODER_ANALYSIS_SUMMARY.md  GDX_PARAMETER_DELTA_ENCODING_ISSUE.md  GTAP_VALIDATION_STATUS.md  LICENSE  Makefile  NOTICE  README.md  balance_bolivia_complete.py  balance_bolivia_crossentropy.py  balance_bolivia_full_optimization.py  balance_bolivia_gras_fixed.py  balance_bolivia_gras_true.py  balance_bolivia_hierarchical.py  balance_bolivia_hybrid_final.py  balance_bolivia_mip.py  balance_bolivia_optimization.py  balance_bolivia_pragmatic.py  balance_bolivia_triple_ras.py  balance_bolivia_with_adjusted_targets.py  balance_bolivia_with_targets.py  convert_bolivia_mip_to_sam.py  gtap7_status_sweep_2026-06-30.md  parity_cascade  plan_gtap7_3x3_shock_close.md  plan_pft_holdfix_surgery.md  (+2 more)
.github/workflows/: tests.yml
.superpowers/sdd/: task-2-report.md
datasets/: v62_10x7.agg  v62_15x10.agg  v62_20x40.agg  v62_3x3.agg  v62_5x5.agg
datasets/gtap6_10x7/: basedata.har  baserate.har  baseview.har  default.prm  sets.har
datasets/gtap6_15x10/: basedata.har  baserate.har  baseview.har  default.prm  sets.har
datasets/gtap6_20x41/: basedata.har  baserate.har  baseview.har  default.prm  sets.har
datasets/gtap6_3x3/: basedata.har  baserate.har  baseview.har  default.prm  sets.har
datasets/gtap6_3x4/: basedata.har  baserate.har  baseview.har  default.prm  sets.har
datasets/gtap6_5x5/: basedata.har  baserate.har  baseview.har  default.prm  sets.har
datasets/gtap7_10x7/: basedata.har  baserate.har  baseview.har  co2.har  default.prm  gsdfgtrade.har  gsdfnco2.har  gsdfvole.har  gtapSAM.har  sets.har  v7_consolidated.gdx
datasets/gtap7_15x10/: basedata.har  baserate.har  baseview.har  co2.har  default.prm  gsdfgtrade.har  gsdfnco2.har  gsdfvole.har  gtapSAM.har  sets.har  v7_consolidated.gdx
datasets/gtap7_20x41/: CMFSTART  basedata.har  baserate.har  baseview.har  co2.har  default.prm  gsdfnco2.har  gsdfvole.har  gtapSAM.har  sets.har  v7_consolidated.gdx
datasets/gtap7_3x3/: basedata.har  baserate.har  baseview.har  co2.har  default.prm  gsdfgtrade.har  gsdfnco2.har  gsdfvole.har  gtapSAM.har  metadata.har  sets.har  v7_consolidated.gdx
datasets/gtap7_3x4/: basedata.har  baserate.har  baseview.har  co2.har  default.prm  gsdfgtrade.har  gsdfnco2.har  gsdfvole.har  gtapSAM.har  sets.har  v62_4x3_egy.agg  v7_consolidated.gdx
datasets/gtap7_5x5/: basedata.har  baserate.har  baseview.har  co2.har  default.prm  gsdfgtrade.har  gsdfnco2.har  gsdfvole.har  gtapSAM.har  sets.har  v7_consolidated.gdx
docs/: MULTIDIM_IMPLEMENTATION.md  PEDRO.md  delta_gdx2.md  equilibria_gams_exact_replication_plan.md  equilibria_structural_stabilization_plan_2026-02-19.md  finding_sam_ieem_vs_sam_pep.md  gams_parity_matrix.md  gdx_params.md  gdx_reader_guide.md  gtap_gams_mcp_parity_plan.md  ieem_to_pep_transformations.md  ieem_to_pep_transformations_en.md  ieem_to_pep_transformations_es.md  multidim_parameters.md  pep_systemic_parity_pipeline.md  readme.md
docs/analysis/: bolivia_mip_data_analysis.md  bolivia_mip_implementation_guide.md  bolivia_mip_technical_report.md  mip_bolivia_analysis.md
docs/archive/: gdx_decoder_analysis_summary.md  gdx_parameter_delta_encoding_issue.md
docs/findings/: finding_sam_ieem_vs_sam_pep.md  gempack_welfare_not_cellwise_2026-07-23.md  gtap_baseline_inventory_2026-04-07.md  gtap_mcp_structural_gap_2026-04-10.md  gtap_v62_phase310_gragg_convergence.md  gtap_v62_phase311_hypothesis_b_rejected.md  gtap_v62_phase312_path_scaling.md  (+28 more)
examples/: analyze_2d_set_format.py  analyze_3d_4d_structure.py  analyze_3d_4d_v2.py  analyze_3d_format.py  analyze_6d_binary.py  analyze_domains.py  analyze_set_data.py  analyze_set_format.py  check_gams_sets.py  debug_6d.py  debug_sparse_indices.py  detailed_block_analysis.py  detailed_hex_analysis.py  example_01_basic_setup.py  example_02_sets_parameters.py  example_03_sam_data.py  example_04_custom_blocks.py  example_05_complete_model.py  example_06_pyomo_backend.py  example_07_templates.py  example_08_calibration.py  example_09_pep_model.py  example_10_pep_comparison.py  example_11_pep_gdp_sam_comparison.py  example_5d_usage.py  example_6d_usage.py  example_pep_static_clean.py  find_columns.py  gdx_binary_analyzer.py  gdx_deep_analysis.py  gdx_full_demo.py  gdx_interpolation_issue.py  gdx_reader_example.py  gdx_reader_vars_eqs.py  gdx_sequence_detector.py  gdx_set_reader_demo.py  gdx_writer_demo.py  multidim_examples.py  parse_2d_set_manual.py  parse_row_data.py  (+8 more)
reports/: gdx_comparison_final_report.md  gdx_comparison_report.md  validation_report_final.md
results/: python_pep_results.gdx
runs/: GEMPACK_UPDATED_HAR_GUIDE.md  gempack_updated_har_guide.md
scripts/: analyze_gams_baseline.py  analyze_sam_storage.py  audit_cri_raw_mapping.py  cal_dump.gms  cal_dump_neos.gms  check_gams_parity.py  check_lowercase_filenames.py  compare_excel_values.py  compare_gdx.py  compare_gdx_detailed.py  compare_pep2_gams_python.py  compare_pep_results.py  compare_with_gams.py  create_cri_labor_tax_mapping.py  debug_equations.py  fix_cri_sam_for_pep.py  generate_baseline_manifest.py  print_structural_report_summary.py  readme.md  run_all_calibration.py  run_dynamic_sam_python.py  run_manual_sam_pipeline.py  run_pep_model.py  run_pep_systemic_parity.py  run_sam_qa.py  run_solver.py  run_solver_cri_dynamic_sam.py  run_solver_excel.py  setup_ipopt.sh  solve_pep_model.py  validate_gdx.py  verify_calibration.py  verify_pep2_full_parity.py
tests/: conftest.py  readme.md  test_baseline_manifest.py  test_final_calibration.py  test_income_calibration.py  test_model.py  test_production_calibration.py  test_sam_qa.py
(+1050 files in other folders)
