# pyproject.toml - equilibria: CGE modeling framework
[project]
name = "equilibria"
version = "0.1.0"
description = "A modern Python framework for Computable General Equilibrium (CGE) modeling with modular equation blocks, universal data I/O, and auto-calibration."
authors = [
    { name = "Marlon Molina", email = "dracomarmol@gmail.com" }
]
maintainers = [
    { name = "Marlon Molina", email = "dracomarmol@gmail.com" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = [
    "cge",
    "computable-general-equilibrium",
    "economics",
    "economic-modeling",
    "social-accounting-matrix",
    "sam",
    "gtap",
    "trade-policy",
    "optimization",
    "pyomo",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Typing :: Typed",
]

# Core dependencies
dependencies = [
    "numpy>=1.24",
    "openpyxl>=3.1.5",
    "pandas>=2.0",
    "pydantic>=2.0",
    "pyomo>=6.9.5",
    "xlrd>=2.0.2",
]

[project.optional-dependencies]
# Optimization backends
pyomo = ["pyomo>=6.7"]
poi = ["pyoptinterface>=0.1"]

# Data format support
excel = ["openpyxl>=3.1", "xlrd>=2.0"]

# Visualization
viz = ["matplotlib>=3.7", "plotly>=5.0"]

# Development
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",
    "pre-commit>=3.0",
]

# Documentation
docs = [
    "mkdocs>=1.5",
    "mkdocs-material>=9.0",
    "mkdocstrings[python]>=0.24",
]

# All optional dependencies
all = [
    "equilibria[pyomo]",
]

[project.urls]
Homepage = "https://github.com/mmc00/equilibria"
Documentation = "https://equilibria.readthedocs.io"
Repository = "https://github.com/mmc00/equilibria"
Issues = "https://github.com/mmc00/equilibria/issues"
Changelog = "https://github.com/mmc00/equilibria/blob/main/CHANGELOG.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/equilibria"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/docs",
]

# ============================================================================
# Tool configurations
# ============================================================================

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "ty>=0.0.14",
]

[tool.ruff]
target-version = "py310"
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
]

[tool.ruff.lint.isort]
known-first-party = ["equilibria"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "pandas.*",
    "numpy.*",
    "pyomo.*",
    "gdxpds.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = [
    "-ra",
    "-q",
    "--strict-markers",
]
markers = [
    "slow: marks tests as slow",
    "integration: marks integration tests",
]

[tool.coverage.run]
source = ["src/equilibria"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
