# pyproject.toml - equilibria: CGE modeling framework
[project]
name = "equilibria"
version = "0.5.1"
description = "A modern Python framework for Computable General Equilibrium (CGE) modeling with modular equation blocks, universal data I/O, and auto-calibration."
authors = [
    { name = "Marlon Molina", email = "dracomarmol@gmail.com" }
]
maintainers = [
    { name = "Marlon Molina", email = "dracomarmol@gmail.com" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = [
    "cge",
    "computable-general-equilibrium",
    "economics",
    "economic-modeling",
    "social-accounting-matrix",
    "sam",
    "gtap",
    "trade-policy",
    "optimization",
    "pyomo",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Typing :: Typed",
]

# Core dependencies
dependencies = [
    "numpy>=1.24",
    "openpyxl>=3.1.5",
    "pandas>=2.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "pyomo>=6.9.5",
    "xlrd>=2.0.2",
    "certifi>=2026.1.4",
    "click>=8.4.1",
    "scipy>=1.15.3",
]

[project.optional-dependencies]
# Optimization backends
pyomo = ["pyomo>=6.7"]
poi = ["pyoptinterface>=0.1"]
ipopt = ["cyipopt>=1.6.1"]

# Data format support
excel = ["openpyxl>=3.1", "xlrd>=2.0"]

# Visualization
viz = ["matplotlib>=3.7", "plotly>=5.0"]

# Development
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",
    "pre-commit>=3.0",
]

# Documentation
docs = [
    "sphinx>=7.2",
    "furo>=2024.1",
    "myst-parser>=2.0",
    "sphinx-copybutton>=0.5",
    "sphinx-design>=0.5",
    "sphinx-gallery>=0.15",
    "matplotlib>=3.7",
    "pandas>=2.0",
]

# All optional dependencies
all = [
    "equilibria[pyomo]",
]

[project.urls]
Homepage = "https://github.com/mmc00/equilibria"
Documentation = "https://equilibria.readthedocs.io"
Repository = "https://github.com/mmc00/equilibria"
Issues = "https://github.com/mmc00/equilibria/issues"
Changelog = "https://github.com/mmc00/equilibria/blob/main/CHANGELOG.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/equilibria"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/docs",
]

# ============================================================================
# Tool configurations
# ============================================================================

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "ty>=0.0.14",
]
# Optional group: install harpy3 to enable the L7 harpy-oracle round-trip
# tests for the HAR writer. CI never installs this group; the harpy library
# is used ONLY as a black-box oracle in dev (see scripts/har/oracle_check.py
# and src/equilibria/babel/har/README.md).
har-oracle = [
    "harpy3>=0.3.1",
]

[tool.ruff]
target-version = "py310"
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    # Domain/scientific-code noise: kept intentionally rather than churn the
    # model. Reviewed one-by-one 2026-07-20 while adding pre-commit; the real
    # bugs among them (F821 undefined names) were fixed, not ignored.
    "E741",   # ambiguous var name: I/l/O are standard CGE notation (Investment, ...)
    "ARG001", # unused function arg: Pyomo rule/callback signatures
    "ARG002", # unused method arg: overrides / interface conformance
    "ARG003", # unused class-method arg: interface conformance
    "ARG005", # unused lambda arg: Pyomo constraint lambdas
    "B007",   # unused loop control var: iterate-by-index patterns
    "F841",   # unused local: kept CGE intermediates (RHS are side-effect-free reads)
    "E402",   # import not at top: deliberate ordering (e.g. _install_null_handler
              # before submodule imports in __init__; conditional imports in scripts)
    "F401",   # unused import: package __init__ re-exports for the public API
    "B023",   # loop-var closure: Pyomo constraint-rule factories in solver code —
              # subtle; deferred to a dedicated pass with the parity sweep as gate
    "B025",   # duplicate try-except arm: defensive struct/value decoding in gdx reader
    # Pure-style simplifications left for a dedicated lint pass (not bugs):
    "SIM102", "SIM105", "SIM108", "SIM117", "B017", "B904",
]

[tool.ruff.lint.isort]
known-first-party = ["equilibria"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "pandas.*",
    "numpy.*",
    "pyomo.*",
    "gdxpds.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = [
    "-ra",
    "-q",
    "--strict-markers",
]
markers = [
    "slow: marks tests as slow",
    "integration: marks integration tests",
    "gams: marks tests that require local GAMS installation and external solver tools",
]

[tool.coverage.run]
source = ["src/equilibria"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
